--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+
+    <div id="root">
+      <script src="../src/components/Forms/SwiftLaTeX/PdfTeXEngine.js"></script>
+    </div>
   </body>
 </html>
